--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ nav a:hover{
 
 header{
     height: 100vh;
-    background-image: url(images/4.jpg);
+    background: url(images/4.jpg) no-repeat center/cover;
     background-size: cover;
     position: relative;
     color: white;
@@ -54,19 +54,36 @@ header{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-family: sans-serif;
+    font-family: 'Lato';
+    text-shadow: 3px 2px 4px #FF0000;
+    margin-bottom: 50px;
+    letter-spacing: 3px;
+}
+
+header h1{
+    padding-top: 50px;
+    padding-bottom: 30px;
+    font-weight: lighter;
+
+}
+
+header p{
+    padding-bottom: 20px;
 }
 
 header a{
     cursor: pointer;
-    padding: 10px 20px;
+    padding: 15px 40px;
     background-color: rgb(145, 6, 6);
     border-radius: 5px;
     outline: none;
     color: white;
     text-decoration: none;
-    margin-top: 20px;
+    animation: buton 5s ease-in infinite;
 }
+
+
+
 header a:hover{
     background-color: rgb(201, 49, 49);
 }
@@ -197,3 +214,31 @@ footer .fa-heart{
     color: red;
     font-size: 30px;
 }
+
+@keyframes buton {
+    0%   {background-color: rgb(0, 47, 255);}
+    25%  {background-color: rgb(180, 180, 105);}
+    50%  {background-color: rgb(180, 66, 66);}
+    100% {background-color: rgb(67, 167, 67);}
+  }
+
+  h1 span{
+     animation: titlu 5s linear infinite;;
+  }
+
+  h1 em{
+      animation: nume 5s linear infinite;
+  }
+
+  @keyframes titlu {
+    0%   {left: -20px; }
+    25%  {right: 20px; }
+    50% { right: 10px;}
+  }
+
+  @keyframes nume {
+    0%   {top: -20px; }
+    25%  {right: 20px; }
+    50% { right: 10px;}
+    75% { bottom: 10px;}
+  }
