--- a/style.css
+++ b/style.css
@@ -20,9 +20,9 @@ body{
 nav{
     background-color: var(--color1);
     color: white;
-    padding: 20px;
+    padding: 10px;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-around;
     position: fixed;
     top: 0;
     right: 0;
@@ -30,16 +30,44 @@ nav{
     z-index: 100;
 }
 
-nav a{
-    color: white;
+.logo{
+    color: red;
+    letter-spacing: 5px;
+    cursor: pointer;
+    
+}
+
+nav ul{
+    display: flex;
+
+}
+
+nav ul li{
     margin-left: 80px;
-    text-decoration: none;
     font-size: 20px;
     font-family: 'Lato' serif;
+    list-style-type: none;
+}
+
+nav ul li a{
+    color: white;
+    text-decoration: none;
 }
 
 nav a:hover{
     color: red;
+}
+
+.burger{
+    display: none;
+}
+
+.burger div{
+    width: 25px;
+    height: 5px;
+    background-color: white;
+    margin: 5px;
+    transition:all 0.3s ease;
 }
 
 
@@ -242,3 +270,72 @@ footer .fa-heart{
     50% { right: 10px;}
     75% { bottom: 10px;}
   }
+
+ @media screen and (max-width:1024px){
+     .nav-links{
+         width: 90%;
+         
+     }
+ }
+
+ @media screen and (max-width:768px){
+     body{
+         overflow-x: hidden;
+     }
+
+     .logo{
+         font-size: 20px;
+     }
+
+    .nav-links{
+        position: absolute;
+        right: 0px;
+        height: 92vh;
+        top: 8vh;
+        background-color: black;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        width: 50%;
+        transform: translateX(100%);
+        transition: transform 0.5s ease-in;
+    }
+
+    .nav-links li{
+        opacity: 0;
+    }
+
+    .burger{
+        display: block;
+        margin: auto 0;
+        cursor: pointer;
+    }
+ }
+
+ .nav-active{
+     transform: translateX(0%);
+ }
+
+ @keyframes navLinkFade{
+     from{
+        opacity: 0;
+        transform: translateX(50px);
+     }
+
+     to{
+        opacity: 1;
+        transform: translateX(0px);
+     }
+ }
+
+ .toggle .line1{
+    transform: rotate(-45deg) translate(-5px,11px);
+ }
+
+ .toggle .line2{
+    opacity: 0;
+}
+
+.toggle .line3{
+    transform: rotate(45deg) translate(-3px,-9px);
+}
