--- a/style.css
+++ b/style.css
@@ -172,7 +172,11 @@ section p{
 
 .projects{
     max-width: 600px;
-    margin:10px
+    margin:10px;
+    transition: 0.3s ease;
+}
+.projects:hover{
+    transform: translateY(-3px);
 }
 
 .hElement{
